fixed Font sizes being too small Chartslider to show fraction stops hide trend in Chartslider if no trend is passed

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,6 @@ a:focus {
     tw-bg-white
     tw-px-3
     tw-py-1
-    tw-text-sm
     hover:tw-bg-bg-component-hover
     active:tw-bg-bg-component-active;
     &.full-width {
@@ -169,7 +168,7 @@ a:focus {
       &.small {
         @apply tw-px-1.5
         tw-py-0.5
-        tw-text-xs;
+        tw-text-sm;
         .msicon {
           @apply tw-pt-[1px];
         }
@@ -196,7 +195,7 @@ a:focus {
       &.small {
         @apply tw-px-1.5
         tw-py-0.5
-        tw-text-xs;
+        tw-text-sm;
         .msicon {
           @apply tw-pt-[1px];
         }
@@ -214,7 +213,7 @@ a:focus {
       &.small {
         @apply tw-px-1.5
         tw-py-0.5
-        tw-text-xs;
+        tw-text-sm;
         .msicon {
           @apply tw-pt-[1px];
         }
@@ -222,7 +221,7 @@ a:focus {
       &.smaller {
         @apply tw-px-1.5
         tw-py-0
-        tw-text-[10px];
+        tw-text-xs;
         .msicon {
           @apply tw-pt-[1px];
         }
@@ -232,7 +231,7 @@ a:focus {
         tw-rounded-[4px]
         tw-px-2
         tw-py-[4px]
-        tw-text-xs;
+        tw-text-sm;
         .msicon {
           @apply tw-pt-[1px];
         }
@@ -453,7 +452,7 @@ a:focus {
         tw-rounded
         tw-bg-red-100
         tw-p-1
-        tw-text-xs
+        tw-text-sm
         tw-text-error;
       }
     }
@@ -478,7 +477,7 @@ a:focus {
         tw-rounded
         tw-bg-red-100
         tw-p-1
-        tw-text-xs
+        tw-text-sm
         tw-text-error;
       }
     }
@@ -559,14 +558,14 @@ a:focus {
         tw-gap-1
         tw-text-left;
       .label {
-        @apply tw-text-sm
+        @apply
           tw-font-normal
           tw-text-text-primary;
       }
       .caption {
         @apply tw-flex
           tw-whitespace-normal
-          tw-text-xs
+          tw-text-sm
           tw-text-text-secondary;
 
         .update {
@@ -602,7 +601,7 @@ a:focus {
     &.new::after {
       content: "NEW";
       @apply tw-self-center
-        tw-text-[10px]
+        tw-text-xs
         tw-text-violet-800;
     }
 
@@ -753,7 +752,7 @@ a:focus {
 
   .caption {
     @apply tw-text-start
-    tw-text-xs
+    tw-text-sm
     tw-text-text-secondary;
   }
   .input-wrapper {
@@ -775,7 +774,6 @@ a:focus {
       tw-border-border
       tw-px-2
       tw-py-1
-      tw-text-sm
       tw-placeholder-text-tertiary;
 
       &.pill {
@@ -799,7 +797,7 @@ a:focus {
   label,
   .label {
     @apply tw-break-words
-    tw-text-sm
+
     tw-font-semibold;
     &.normal {
       @apply tw-font-normal;
@@ -824,7 +822,7 @@ a:focus {
     }
     &.small {
       label {
-        @apply tw-text-xs;
+        @apply tw-text-sm;
       }
     }
   }
@@ -851,7 +849,7 @@ a:focus {
     &.small {
       label,
       .label {
-        @apply tw-text-xs;
+        @apply tw-text-sm;
       }
     }
   }
@@ -886,7 +884,7 @@ a:focus {
 
     label,
     .label {
-      @apply tw-text-xs;
+      @apply tw-text-sm;
     }
   }
 
@@ -896,7 +894,7 @@ a:focus {
     tw-border-violet-800
     tw-bg-violet-50
     tw-px-1.5
-    tw-text-[10px]
+    tw-text-xs
     tw-text-violet-800;
   }
 
@@ -926,7 +924,7 @@ a:focus {
     tw-bg-bg-tertiary
     tw-px-2
     tw-py-0.5
-    tw-text-[10px];
+    tw-text-xs;
     &.green {
       @apply tw-border-green-200
       tw-bg-green-50;
@@ -949,13 +947,12 @@ a:focus {
     tw-font-semibold;
   }
   .text-base {
-    @apply tw-text-sm;
   }
   .text-sm {
-    @apply tw-text-xs;
+    @apply tw-text-sm;
   }
   .text-xxs {
-    @apply tw-text-[10px];
+    @apply tw-text-xs;
   }
 
   .footer {
@@ -989,7 +986,7 @@ a:focus {
       tw-items-center
       tw-gap-6
       tw-whitespace-nowrap
-      tw-text-xs;
+      tw-text-sm;
       > div {
         @apply tw-flex tw-flex-col tw-gap-2;
       }
@@ -1008,7 +1005,6 @@ a:focus {
       tw-border-border
       tw-bg-bg-tertiary
       tw-p-3
-      tw-text-sm
       tw-font-semibold;
     }
   }
@@ -1046,7 +1042,7 @@ a:focus {
       .bbs-list-item-title {
       }
       .bbs-list-item-subtext {
-        @apply tw-text-xs
+        @apply tw-text-sm
         tw-text-text-secondary;
       }
     }
@@ -1074,7 +1070,7 @@ a:focus {
           tw-flex-col
           tw-items-start
           tw-gap-1
-          tw-text-sm;
+          ;
         }
         .expand-icon {
           transition: all 250ms;
@@ -1151,7 +1147,7 @@ a:focus {
       tw-bg-bg-primary
       tw-p-4;
       .subheading {
-        @apply tw-text-xs
+        @apply tw-text-sm
         tw-font-semibold;
       }
       .tag-container {
@@ -1210,7 +1206,7 @@ a:focus {
     tw-border
     tw-border-border
     tw-bg-bg-primary
-    tw-text-xs;
+    tw-text-sm;
 
     &.alert-info {
       @apply tw-border tw-border-indigo-300;
@@ -1471,13 +1467,13 @@ a:focus {
     .popover-header {
       @apply tw-px-4
       tw-py-2
-      tw-text-sm tw-font-semibold;
+       tw-font-semibold;
     }
     .popover-body {
       @apply tw-flex
       tw-flex-col
       tw-gap-2
-      tw-text-xs;
+      tw-text-sm;
       ol {
         padding: 10px;
         list-style: auto;
